<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="alpha">Alpha</string>
    <string name="animate">Animate</string>
    <string name="basic_map">基本地图介绍</string>
    <string name="basic_description">如何创建一个基本地图、截屏功能介绍</string>
    <string name="camera_demo">Camera功能介绍</string>
    <string name="camera_description">介绍在地图中操作Camera中的各种功能</string>
    <string name="clear_map">Clear</string>
    <string name="compass">指南针</string>
    <string name="Rotate">陀螺仪</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="demo_title">AMapsV2  Demos</string>
    <string name="down_arrow">\u2193</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="hue">Hue</string>
    <string name="events_demo">Events功能介绍</string>
    <string name="events_description">对地图的点击，长按，拖动地图事件的功能介绍</string>
    <string name="fill_alpha">Fill Alpha</string>
    <string name="fill_hue">Fill Hue</string>
    <string name="go_to_zhongguancun">中关村</string>
    <string name="go_to_lujiazui">陆家嘴</string>
    <string name="groundoverlay_demo">Ground Overlays</string>
    <string name="groundoverlay_description">Demonstrates how to add a GroundOverlay to a map.</string>
    <string name="hybrid">Hybrid</string>
    <string name="location">正在定位中</string>

    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/satellite</item>
    </string-array>

    <string name="layers_demo">Layers功能介绍</string>
    <string name="layers_description">地图分别以正常模式，卫星模式展示出来</string>
    <string name="left_arrow">\u2190</string>
    <string name="locationsource_demo">Location功能介绍</string>
    <string name="locationsource_description">对系统定位功能简单介绍.</string>
    <string name="locationGPS_demo">gps定位介绍</string>
    <string name="locationGPS_description">介绍如何使用gps定位.</string>
    <string name="locationNetwork_description">介绍如何使用网络定位.</string>
    <string name="locationNetwork_demo">网络定位介绍</string>
    <string name="marker_demo">Markers功能介绍</string>
    <string name="marker_description">简单介绍在地图上添加marker和infoWindow</string>
    <string name="multi_map_demo">展示多个地图</string>
    <string name="multi_map_description">在同一个界面中展示多个地图</string>
    <string name="map_not_ready">SupportMapFragment初始化失败</string>
    <string name="move_the_camera">移动camera</string>
    <string name="my_location">My Location</string>
    <string name="mylocation_button">我的位置按钮</string>
    <string name="mylocation_layer">我的位置图层</string>
    <string name="no_demos">No demos</string>
    <string name="normal">Normal</string>
    <string name="options_demo">Options</string>
    <string name="options_description">Demonstrates how to use Options to initialize a map.</string>
    <string name="polygon_demo">Polygons功能介绍</string>
    <string name="polygon_description">描述在地图绘制多边形</string>
    <string name="polyline_demo">Polylines功能介绍</string>
    <string name="polyline_description">描述在地图中绘制线条</string>
    <string name="programmatic_demo">动态添加一个地图</string>
    <string name="programmatic_description">通过Java代码 实现动态添加一个地图</string>
    <string name="properties_sydney_polyline">设置Polyline属性</string>
    <string name="properties_sydney_polygon">设置Polygon属性</string>
    <string name="route_demo">Route功能介绍</string>
    <string name="reoute_description">描述如何在地图中绘制Route</string>
    <string name="rotate">旋转手势</string>
    <string name="reset_map">Reset</string>
    <string name="retain_map">Retain map</string>
    <string name="retain_map_description">Demonstrates how to reuse a MapFragment.</string>
    <string name="right_arrow">\u2192</string>
    <string name="satellite">Satellite</string>
    <string name="scroll">滑动手势</string>
    <string name="stop_animation">\u25A0</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="tap_instructions">点击或者长按地图</string>
    <string name="terrain">Terrain</string>
    <string name="tile_overlay_demo">Tile Overlays功能介绍</string>
    <string name="tile_overlay_description">描述在地图中添加 tile overlay</string>
    <string name="tilt">倾斜手势</string>
    <string name="traffic">Traffic</string>
    <string name="transparency">Transparency</string>
    <string name="uisettings_demo">UI Settings功能介绍</string>
    <string name="uisettings_description">对地图中UI Settings功能进行描述</string>
    <string name="geocoder_demo">geocoder 功能介绍</string>
    <string name="geocoder_description">描述 geocoder 用法.</string>
    <string name="poisearch_demo">poisearch搜索</string>
    <string name="poisearch_description">poisearch搜索简介</string>
    <string name="offlinemap_demo">离线地图</string>
    <string name="offlinemap_description">介绍离线地图使用.</string>
    <string name="mapview_demo">mapview使用介绍</string>
    <string name="mapview_description">如何使用mapview介绍</string>
    <string name="search_title">搜索关键字</string>
    <string name="up_arrow">\u2191</string>
    <string name="width">Width</string>
    <string name="zoom_buttons">缩放按钮</string>
    <string name="zoom_gestures">缩放手势</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="scale">比例尺</string>

    <!-- offlinemap -->
    <string name="beijing">"北京"</string>
    <string name="start">"开始"</string>
    <string name="pause">"暂停"</string>
    <string name="stop">"停止"</string>
    <string name="remove">"删除"</string>
    <string name="logo_position">logo位置</string>
    <string name="bottom_left">左下</string>
    <string name="bottom_center">底部居中</string>
    <string name="bottom_right">右下</string>
    <string name="map_screenshot">地图截屏</string>
    <string name="get_scale">获取比例尺</string>

</resources>