<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/map_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.amap.api.maps.SupportMapFragment" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="55dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#D000"
            android:orientation="vertical"
            android:paddingRight="5dp" >

            <CheckBox
                android:id="@+id/scale_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:onClick="setScaleEnabled"
                android:text="@string/scale" />

            <CheckBox
                android:id="@+id/zoom_buttons_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="setZoomButtonsEnabled"
                android:text="@string/zoom_buttons" />

            <CheckBox
                android:id="@+id/compass_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:onClick="setCompassEnabled"
                android:text="@string/compass" />

            <CheckBox
                android:id="@+id/mylocationbutton_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:onClick="setMyLocationButtonEnabled"
                android:text="@string/mylocation_button" />

            <CheckBox
                android:id="@+id/mylocationlayer_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:onClick="setMyLocationLayerEnabled"
                android:text="@string/mylocation_layer" />

            <CheckBox
                android:id="@+id/scroll_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="setScrollGesturesEnabled"
                android:text="@string/scroll" />

            <CheckBox
                android:id="@+id/zoom_gestures_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="setZoomGesturesEnabled"
                android:text="@string/zoom_gestures" />

            <CheckBox
                android:id="@+id/tilt_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="setTiltGesturesEnabled"
                android:text="@string/tilt" />

            <CheckBox
                android:id="@+id/rotate_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="setRotateGesturesEnabled"
                android:text="@string/rotate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/logo_position" />

            <RadioGroup
                android:id="@+id/logo_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkedButton="@+id/bottom_left"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/bottom_left"
                    android:text="@string/bottom_left" />

                <RadioButton
                    android:id="@+id/bottom_center"
                    android:text="@string/bottom_center" />

                <RadioButton
                    android:id="@+id/bottom_right"
                    android:text="@string/bottom_right" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>